--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -7,164 +7,199 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+
         }
+
         table {
             width: 500px;
+            border-collapse: collapse;
+            position: relative;
         }
+
         td, th {
             border: 1px solid black;
             padding: 10px;
         }
 
-        tbody > tr:nth-child(2n) { /*odd: impar, even: par */
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
             background-color: lightgray;
         }
 
-        thead {
-            background-color: gray;
+        thead, tfoot {
+            background-color: #383838;
             color: white;
         }
-        caption {
-            font-size: bold;
-            padding: 10px;
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
+        tbody > tr:nth-child(odd) { /* 2n-1 */
+            background-color: white;
+        }
+
+        tbody > tr:nth-child(even) { /* 2n */
             background-color: lightgray;
+        }
+
+        td.num {
+            text-align: right;
         }
     </style>
 </head>
 <body>
-    <h1>Anatomia para tabelas grandes</h1>
-    <!-- TABLE
+    <h1>Uso de tabelas grandes</h1>
+    <!--
+        ANATOMIA PARA TABELAS GRANDES
+        TABLE
             CAPTION
             THEAD
-                tr, td, th
+                TR, TD, TH
             TBODY
-                tr, td, th
+                TR, TD, TH
             TFOOT
-                tr, td, th   -->
+                TR, TD, TH
+    -->
     <table>
-        <caption>População das Unidades Federativas</caption>
+        <caption>População das Unidades Federativas</caption> 
         <thead>
             <tr>
-                <th scope="col">
-                    Estado
-                </th>
+                <th scope="col">Estado</th>
                 <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
+        <tfoot>
+            <tr>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>210.147.125</strong></td>
+            </tr>
+        </tfoot>
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td>44 411 238</td>
+                <td class="num">45.919.049</td>
             </tr>
             <tr>
                 <td>Minas Gerais</td>
-                <td>20 538 718	</td>
+                <td class="num">21.168.791</td>
             </tr>
             <tr>
                 <td>Rio de Janeiro</td>
-                <td>16 054 524</td>
+                <td class="num">17.264.943</td>
             </tr>
             <tr>
                 <td>Bahia</td>
-                <td>14 141 626	</td>
+                <td class="num">14.873.064</td>
             </tr>
             <tr>
                 <td>Paraná</td>
-                <td>11 444 380	</td>
+                <td class="num">11.433.957</td>
             </tr>
             <tr>
                 <td>Rio Grande do Sul</td>
-                <td>10 882 965	</td>
+                <td class="num">11.377.239</td>
             </tr>
             <tr>
                 <td>Pernambuco</td>
-                <td>9 058 931	</td>
+                <td class="num">9.557.071</td>
             </tr>
             <tr>
                 <td>Ceará</td>
-                <td>8 794 957	</td>
+                <td class="num">9.132.078</td>
             </tr>
             <tr>
                 <td>Pará</td>
-                <td>8 121 025	</td>
+                <td class="num">8.602.865</td>
             </tr>
             <tr>
                 <td>Santa Catarina</td>
-                <td>7 610 361	</td>
-            </tr>
-            <tr>
-                <td>Goiás</td>
-                <td>7 056 495</td>
+                <td class="num">7.164.788</td>
             </tr>
             <tr>
                 <td>Maranhão</td>
-                <td>6 775 805	</td>
+                <td class="num">7.075.181</td>
             </tr>
             <tr>
-                <td>Paraíba</td>
-                <td>3 974 687	</td>
+                <td>Goiás</td>
+                <td class="num">7.018.354</td>
             </tr>
             <tr>
                 <td>Amazonas</td>
-                <td>3 941 613	</td>
+                <td class="num">4.144.597</td>
             </tr>
             <tr>
                 <td>Espírito Santo</td>
-                <td>3 833 712	</td>
+                <td class="num">4.018.650</td>
             </tr>
             <tr>
-                <td>Mato Grosso</td>
-                <td>3 658 649	</td>
+                <td>Paraíba</td>
+                <td class="num">4.018.127</td>
             </tr>
             <tr>
                 <td>Rio Grande do Norte</td>
-                <td>3 302 729	</td>
+                <td class="num">3.506.853</td>
             </tr>
             <tr>
-                <td>Piauí</td>
-                <td>3 271 199	</td>
+                <td>Mato Grosso</td>
+                <td class="num">3.484.466</td>
             </tr>
             <tr>
                 <td>Alagoas</td>
-                <td>3 127 683</td>
+                <td class="num">3.337.357</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3.273.227</td>
             </tr>
             <tr>
                 <td>Distrito Federal</td>
-                <td>2 817 381	</td>
+                <td class="num">3.015.268</td>
             </tr>
             <tr>
                 <td>Mato Grosso do Sul</td>
-                <td>2 757 013	</td>
+                <td class="num">2.778.986</td>
             </tr>
             <tr>
                 <td>Sergipe</td>
-                <td>2 209 558	</td>
+                <td class="num">2.298.696</td>
             </tr>
             <tr>
                 <td>Rondônia</td>
-                <td>1 581 196</td>
+                <td class="num">1.777.225</td>
             </tr>
             <tr>
                 <td>Tocantins</td>
-                <td>1 511 460	</td>
+                <td class="num">1.572.866</td>
             </tr>
             <tr>
                 <td>Acre</td>
-                <td>830 018	</td>
+                <td class="num">881.935</td>
             </tr>
             <tr>
                 <td>Amapá</td>
-                <td>733 759</td>
+                <td class="num">845.731</td>
             </tr>
             <tr>
                 <td>Roraima</td>
-                <td>636 707	</td>
+                <td class="num">605.761</td>
             </tr>
-        </tbody>
-        <tfoot>
-            <th scope="row">Total de habitantes</th>
-            <td>203 062 512	</td>
-        </tfoot>
+        </tbody>      
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptas optio perspiciatis reprehenderit quod mollitia iste, soluta, illo, in deleniti eligendi consectetur provident voluptatem veritatis eum eius nulla ut omnis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet amet voluptatem veniam voluptatum officia quisquam perspiciatis blanditiis, mollitia ratione qui nesciunt, sint deleniti, assumenda quasi quos vero doloribus! Fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, consectetur architecto omnis rem, ullam adipisci tenetur dolore perspiciatis officiis vitae voluptates atque laborum necessitatibus! Reiciendis aspernatur impedit reprehenderit dignissimos placeat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda unde repellat dolorum eum voluptates ad illum recusandae, aperiam nihil et? Blanditiis, illo! In consectetur accusantium odit quos, repudiandae aut aspernatur?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptas optio perspiciatis reprehenderit quod mollitia iste, soluta, illo, in deleniti eligendi consectetur provident voluptatem veritatis eum eius nulla ut omnis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet amet voluptatem veniam voluptatum officia quisquam perspiciatis blanditiis, mollitia ratione qui nesciunt, sint deleniti, assumenda quasi quos vero doloribus! Fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, consectetur architecto omnis rem, ullam adipisci tenetur dolore perspiciatis officiis vitae voluptates atque laborum necessitatibus! Reiciendis aspernatur impedit reprehenderit dignissimos placeat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda unde repellat dolorum eum voluptates ad illum recusandae, aperiam nihil et? Blanditiis, illo! In consectetur accusantium odit quos, repudiandae aut aspernatur?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptas optio perspiciatis reprehenderit quod mollitia iste, soluta, illo, in deleniti eligendi consectetur provident voluptatem veritatis eum eius nulla ut omnis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet amet voluptatem veniam voluptatum officia quisquam perspiciatis blanditiis, mollitia ratione qui nesciunt, sint deleniti, assumenda quasi quos vero doloribus! Fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, consectetur architecto omnis rem, ullam adipisci tenetur dolore perspiciatis officiis vitae voluptates atque laborum necessitatibus! Reiciendis aspernatur impedit reprehenderit dignissimos placeat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda unde repellat dolorum eum voluptates ad illum recusandae, aperiam nihil et? Blanditiis, illo! In consectetur accusantium odit quos, repudiandae aut aspernatur?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptas optio perspiciatis reprehenderit quod mollitia iste, soluta, illo, in deleniti eligendi consectetur provident voluptatem veritatis eum eius nulla ut omnis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet amet voluptatem veniam voluptatum officia quisquam perspiciatis blanditiis, mollitia ratione qui nesciunt, sint deleniti, assumenda quasi quos vero doloribus! Fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, consectetur architecto omnis rem, ullam adipisci tenetur dolore perspiciatis officiis vitae voluptates atque laborum necessitatibus! Reiciendis aspernatur impedit reprehenderit dignissimos placeat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda unde repellat dolorum eum voluptates ad illum recusandae, aperiam nihil et? Blanditiis, illo! In consectetur accusantium odit quos, repudiandae aut aspernatur?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptas optio perspiciatis reprehenderit quod mollitia iste, soluta, illo, in deleniti eligendi consectetur provident voluptatem veritatis eum eius nulla ut omnis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet amet voluptatem veniam voluptatum officia quisquam perspiciatis blanditiis, mollitia ratione qui nesciunt, sint deleniti, assumenda quasi quos vero doloribus! Fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, consectetur architecto omnis rem, ullam adipisci tenetur dolore perspiciatis officiis vitae voluptates atque laborum necessitatibus! Reiciendis aspernatur impedit reprehenderit dignissimos placeat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda unde repellat dolorum eum voluptates ad illum recusandae, aperiam nihil et? Blanditiis, illo! In consectetur accusantium odit quos, repudiandae aut aspernatur?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptas optio perspiciatis reprehenderit quod mollitia iste, soluta, illo, in deleniti eligendi consectetur provident voluptatem veritatis eum eius nulla ut omnis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet amet voluptatem veniam voluptatum officia quisquam perspiciatis blanditiis, mollitia ratione qui nesciunt, sint deleniti, assumenda quasi quos vero doloribus! Fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, consectetur architecto omnis rem, ullam adipisci tenetur dolore perspiciatis officiis vitae voluptates atque laborum necessitatibus! Reiciendis aspernatur impedit reprehenderit dignissimos placeat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda unde repellat dolorum eum voluptates ad illum recusandae, aperiam nihil et? Blanditiis, illo! In consectetur accusantium odit quos, repudiandae aut aspernatur?</p>
 </body>
 </html>
