--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teste com iframe</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        iframe {
+            width: 300px;
+            display: block;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Teste com iframe</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nostrum iste earum ullam minima neque hic minus accusantium nemo fuga. Vitae reprehenderit nostrum ad id repellat, similique porro quae exercitationem.</p>
+    <iframe src="paginasextras/pagina001.html" frameborder="0">
+        <p>Infelizmente seu navegador não é compatível com o iframe.</p>
+    </iframe>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nostrum iste earum ullam minima neque hic minus accusantium nemo fuga. Vitae reprehenderit nostrum ad id repellat, similique porro quae exercitationem.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nostrum iste earum ullam minima neque hic minus accusantium nemo fuga. Vitae reprehenderit nostrum ad id repellat, similique porro quae exercitationem.</p>
 </body>
 </html>
