--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Uso de iframes</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        iframe#tela {
+            width: 95vw;
+            height: 400px;
+            border: 2px solid black;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Faça uma escolha</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dicta ipsam quibusdam qui blanditiis maiores nemo cupiditate distinctio deleniti eos tempore a repellat sapiente odit quo, praesentium obcaecati, dignissimos necessitatibus!</p>
+    <ul>
+        <li> <a href="paginasextras/pagina001.html" target="frame">Primeira Página</a></li>
+        <li> <a href="paginasextras/pagina002.html" target="frame">Segunda Página</a></li>
+        <li> <a href="paginasextras/pagina003.html" target="frame">Terceira Página</a></li>
+    </ul>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo magnam molestiae ducimus non. Omnis, temporibus? Optio quod quasi hic magni sequi nisi. Velit harum, laudantium facilis sit a molestiae minima. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus deserunt beatae saepe ipsum, suscipit at animi cupiditate nihil delectus minima, neque quasi explicabo pariatur voluptatem assumenda rerum soluta recusandae doloribus?</p>
+    <iframe src="" id="tela" name="frame">
+        <p>Infelizmente seu navegador não é compatível com isso.</p>
+    </iframe>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quibusdam, laudantium, voluptatibus temporibus non exercitationem a labore repellat velit ea eligendi molestiae sapiente. Aut autem sed molestias voluptatem ducimus veritatis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi itaque explicabo hic quidem labore. Ex ipsum fugiat illum similique repudiandae maxime nihil quos animi consequuntur, a, adipisci, beatae natus veniam.</p>
 </body>
 </html>
