--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -24,7 +24,7 @@
         <li> <a href="paginasextras/pagina003.html" target="frame">Terceira Página</a></li>
     </ul>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo magnam molestiae ducimus non. Omnis, temporibus? Optio quod quasi hic magni sequi nisi. Velit harum, laudantium facilis sit a molestiae minima. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus deserunt beatae saepe ipsum, suscipit at animi cupiditate nihil delectus minima, neque quasi explicabo pariatur voluptatem assumenda rerum soluta recusandae doloribus?</p>
-    <iframe src="" id="tela" name="frame">
+    <iframe srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo magnam molestiae ducimus non. Omnis, temporibus? Optio quod quasi hic magni sequi nisi. Velit harum, laudantium facilis sit a molestiae minima.</p><img src=../imagens/cursoemvideo.png'" id="tela" name="frame">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quibusdam, laudantium, voluptatibus temporibus non exercitationem a labore repellat velit ea eligendi molestiae sapiente. Aut autem sed molestias voluptatem ducimus veritatis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi itaque explicabo hic quidem labore. Ex ipsum fugiat illum similique repudiandae maxime nihil quos animi consequuntur, a, adipisci, beatae natus veniam.</p>
