--- a/desafios/desafio016.html
+++ b/desafios/desafio016.html
@@ -6,6 +6,8 @@
     <title>Projeto Login</title>
     <link rel="stylesheet" href="estilo/style2.css">
     <link rel="stylesheet" href="estilo/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
@@ -16,8 +18,23 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vinde novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente. </p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            person
+                            </span>
+                        <input type="email" name="usuario" id="iusuario" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="iusuario">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            key
+                            </span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="">Senha</label>
+                        <input type="submit" value="Entrar">
+                        <a href="esqueci.html">Esqueci a senha</a>
+                    </div>
                 </form>
             </div>
         </section>
