--- a/desafios/desafio016.html
+++ b/desafios/desafio016.html
@@ -29,12 +29,12 @@
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             key
-                            </span>
+                        </span>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="">Senha</label>
-                        <input type="submit" value="Entrar">
-                        <a href="esqueci.html">Esqueci a senha</a>
                     </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">Esqueci a senha</a>
                 </form>
             </div>
         </section>
